[package]
name = "portability-gfx"
publish = false
version = "0.1.0"
edition = "2018"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
	"Markus Siglreithmaier <m.siglreith@gmail.com>",
]

[lib]
name = "portability_gfx"

[features]
default = []
dispatch = []
nightly = ["fxhash", "lazy_static"]

[dependencies]
copyless = "0.1.1"
env_logger = { version = "0.8", optional = true }
fxhash = { version = "0.2", optional = true }
lazy_static = { version = "1", optional = true }
log = { version = "0.4", features = ["release_max_level_error"] }
renderdoc = { version = "0.5", optional = true }
raw-window-handle = "0.3"
gfx-hal = "0.9"
gfx-backend-empty = "0.9.0"

[dependencies.profiling]
version = "1.0.1"
default-features = false
#features = ["profile-with-tracy"]


[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies]
gfx-backend-vulkan = { version = "0.9", optional = true }

[target.'cfg(windows)'.dependencies]
gfx-backend-dx12 = { version = "0.9", optional = true }
gfx-backend-dx11 = { version = "0.9", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
gfx-backend-metal = { version = "0.9", optional = true }

[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "ios")))'.dependencies]
gfx-backend-gl = { version = "0.9", optional = true }
